cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__AmazonScience__Multi-IaC-Eval__multi_iac_eval__task_136.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  DomainName:
    Description: FQDN of the domain for this directory
    Type: String
    Default: corp.example.com

  SimpleADShortName:
    Description: Netbios name of the domain for this directory
    Type: String
    Default: corp

  CreateAlias:
    Description: Only required for applications which need a URL to connect to the directory
    Type: String
    AllowedValues:
      - "true"
      - "false"
    Default: "false"

  PrivateSubnet1:
    Description: Subnet to be used for the Directory
    Type: List<AWS::EC2::Subnet::Id>

  PrivateSubnet2:
    Description: Subnet to be used for the Directory
    Type: List<AWS::EC2::Subnet::Id>

  VPCID:
    Description: The VPC the directory will be created in
    Type: List<AWS::EC2::VPC::Id>

  Size:
    Description: Size of the Simple AD
    Type: String
    AllowedValues:
      - Small
      - Large
    Default: Small

Conditions:
  Alias: !Equals
    - !Ref CreateAlias
    - "true"

Resources:
  SimpleAD:
    Type: AWS::DirectoryService::SimpleAD
    Properties:
      CreateAlias: false
      EnableSso: true
      Name: !Ref DomainName
      Password: '{{resolve:secretsmanager:simple-ad-pw:SecretString:pasword}}'
      ShortName: !Ref SimpleADShortName
      Size: !Ref Size
      VpcSettings:
        SubnetIds:
          - !Select
            - "0"
            - !Ref PrivateSubnet1
          - !Select
            - "0"
            - !Ref PrivateSubnet2
        VpcId: !Select
          - "0"
          - !Ref VPCID

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Simple AD
      VpcId: !Select
        - "0"
        - !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 389
          ToPort: 389
          CidrIp: !Select
            - "0"
            - !Ref PrivateSubnet1
          Description: Allow LDAP traffic
        - IpProtocol: tcp
          FromPort: 389
          ToPort: 389
          CidrIp: !Select
            - "0"
            - !Ref PrivateSubnet2
          Description: Allow LDAP traffic

Outputs:
  DirectoryID:
    Description: ID of the SimpleAD
    Value: !Ref SimpleAD

  PrimaryDNS:
    Description: DNS IPs of the SimpleAD
    Value: !Select
      - 0
      - !GetAtt SimpleAD.DnsIpAddresses

  SecondaryDNS:
    Description: DNS IPs of the SimpleAD
    Value: !Select
      - 1
      - !GetAtt SimpleAD.DnsIpAddresses

  DirectoryAlias:
    Description: URL for the alias
    Value: !GetAtt SimpleAD.Alias
    Condition: Alias

  SecurityGroupID:
    Description: Security Group ID for Simple AD
    Value: !Ref SecurityGroup
